--- a/NextDepartures/Base.lproj/Main.storyboard
+++ b/NextDepartures/Base.lproj/Main.storyboard
@@ -10,10 +10,6 @@
             <string>Gotham-Bold</string>
             <string>Gotham-Bold</string>
             <string>Gotham-Bold</string>
-            <string>Gotham-Bold</string>
-            <string>Gotham-Bold</string>
-            <string>Gotham-Bold</string>
-            <string>Gotham-Bold</string>
         </mutableArray>
         <mutableArray key="Gotham-Book.otf">
             <string>Gotham-Book</string>
@@ -29,6 +25,12 @@
             <string>Gotham-Book</string>
             <string>Gotham-Book</string>
             <string>Gotham-Book</string>
+        </mutableArray>
+        <mutableArray key="Gotham-Medium.ttf">
+            <string>GothamMedium</string>
+            <string>GothamMedium</string>
+            <string>GothamMedium</string>
+            <string>GothamMedium</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -88,13 +90,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bYE-z6-yht">
-                                                    <rect key="frame" x="66" y="11" width="465" height="18.5"/>
-                                                    <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="16"/>
+                                                    <rect key="frame" x="66" y="13" width="465" height="14.5"/>
+                                                    <fontDescription key="fontDescription" name="GothamMedium" family="Gotham Medium" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service details" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x1c-lq-GaS">
-                                                    <rect key="frame" x="66" y="34" width="465" height="32"/>
+                                                    <rect key="frame" x="66" y="32.5" width="465" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="Wpm-ih-kO0"/>
                                                     </constraints>
@@ -143,7 +145,7 @@
                                                 <constraint firstItem="x1c-lq-GaS" firstAttribute="top" secondItem="bYE-z6-yht" secondAttribute="bottom" constant="5" id="pO4-uJ-7Xb"/>
                                                 <constraint firstItem="vl6-61-5GU" firstAttribute="leading" secondItem="bYE-z6-yht" secondAttribute="trailing" constant="10" id="uOt-Ob-4ay"/>
                                                 <constraint firstItem="hSn-Kw-paU" firstAttribute="top" secondItem="Ew4-xs-TTa" secondAttribute="topMargin" constant="3" id="uh9-Ww-HgF"/>
-                                                <constraint firstItem="bYE-z6-yht" firstAttribute="top" secondItem="Ew4-xs-TTa" secondAttribute="topMargin" constant="3" id="yWU-3b-wBt"/>
+                                                <constraint firstItem="bYE-z6-yht" firstAttribute="top" secondItem="Ew4-xs-TTa" secondAttribute="topMargin" constant="5" id="yWU-3b-wBt"/>
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
@@ -288,13 +290,13 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="StopDetails" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TvU-gi-dbx">
-                                                    <rect key="frame" x="68" y="8" width="514" height="18.5"/>
-                                                    <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="16"/>
+                                                    <rect key="frame" x="68" y="12" width="514" height="14.5"/>
+                                                    <fontDescription key="fontDescription" name="GothamMedium" family="Gotham Medium" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="LTB-pN-vWC">
-                                                    <rect key="frame" x="68" y="30" width="514" height="14.5"/>
+                                                    <rect key="frame" x="68" y="29.5" width="514" height="14.5"/>
                                                     <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="13"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
@@ -308,7 +310,7 @@
                                                 <constraint firstAttribute="trailingMargin" secondItem="TvU-gi-dbx" secondAttribute="trailing" constant="10" id="GNJ-2Q-4d6"/>
                                                 <constraint firstItem="TvU-gi-dbx" firstAttribute="leading" secondItem="IuU-JK-QAX" secondAttribute="trailing" constant="10" id="NOz-ge-pK5"/>
                                                 <constraint firstItem="LTB-pN-vWC" firstAttribute="top" secondItem="TvU-gi-dbx" secondAttribute="bottom" constant="3" id="goe-Ta-MhY"/>
-                                                <constraint firstItem="TvU-gi-dbx" firstAttribute="top" secondItem="LWH-BF-rdb" secondAttribute="topMargin" id="r2M-Dy-OV5"/>
+                                                <constraint firstItem="TvU-gi-dbx" firstAttribute="top" secondItem="LWH-BF-rdb" secondAttribute="topMargin" constant="4" id="r2M-Dy-OV5"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -433,13 +435,13 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ykR-rV-kCm">
-                                            <rect key="frame" x="78" y="14" width="452.5" height="18.5"/>
-                                            <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="16"/>
+                                            <rect key="frame" x="78" y="18" width="452.5" height="14.5"/>
+                                            <fontDescription key="fontDescription" name="GothamMedium" family="Gotham Medium" pointSize="16"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbQ-BN-pZb">
-                                            <rect key="frame" x="78" y="36" width="452.5" height="14.5"/>
+                                            <rect key="frame" x="78" y="35.5" width="452.5" height="14.5"/>
                                             <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="13"/>
                                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
@@ -454,7 +456,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="minutes" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edB-y7-Tid">
-                                            <rect key="frame" x="539" y="42.5" width="53" height="11.5"/>
+                                            <rect key="frame" x="539" y="42" width="53" height="11.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="53" id="qCY-q2-V1s"/>
                                             </constraints>
@@ -481,7 +483,7 @@
                                         <constraint firstAttribute="centerY" secondItem="GWZ-ZH-D3W" secondAttribute="centerY" constant="3.5" id="e92-n3-WME"/>
                                         <constraint firstItem="edB-y7-Tid" firstAttribute="top" secondItem="nTc-id-qsB" secondAttribute="bottom" id="gSF-fB-SWz"/>
                                         <constraint firstItem="GWZ-ZH-D3W" firstAttribute="leading" secondItem="SOp-sP-aQe" secondAttribute="leadingMargin" constant="8" id="lmv-wo-8fG"/>
-                                        <constraint firstItem="ykR-rV-kCm" firstAttribute="top" secondItem="SOp-sP-aQe" secondAttribute="topMargin" constant="6" id="v59-q3-PF6"/>
+                                        <constraint firstItem="ykR-rV-kCm" firstAttribute="top" secondItem="SOp-sP-aQe" secondAttribute="topMargin" constant="10" id="v59-q3-PF6"/>
                                         <constraint firstItem="tbQ-BN-pZb" firstAttribute="leading" secondItem="ykR-rV-kCm" secondAttribute="leading" id="vXe-ES-62e"/>
                                         <constraint firstItem="tbQ-BN-pZb" firstAttribute="width" secondItem="ykR-rV-kCm" secondAttribute="width" id="wjM-e2-qWE"/>
                                         <constraint firstItem="nTc-id-qsB" firstAttribute="top" secondItem="SOp-sP-aQe" secondAttribute="topMargin" constant="6" id="z56-40-LEf"/>
@@ -559,13 +561,13 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xvc-fn-WdK">
-                                                    <rect key="frame" x="66" y="11" width="465" height="18.5"/>
-                                                    <fontDescription key="fontDescription" name="Gotham-Bold" family="Gotham" pointSize="16"/>
+                                                    <rect key="frame" x="66" y="11" width="465" height="14.5"/>
+                                                    <fontDescription key="fontDescription" name="GothamMedium" family="Gotham Medium" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Service details" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xFO-Tc-FAE">
-                                                    <rect key="frame" x="66" y="34" width="465" height="32"/>
+                                                    <rect key="frame" x="66" y="30.5" width="465" height="32"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="32" id="HN6-8X-1Dp"/>
                                                     </constraints>
@@ -741,6 +743,6 @@
         <image name="train" width="96" height="120"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Hhf-7y-YSp"/>
+        <segue reference="OZB-lF-AlU"/>
     </inferredMetricsTieBreakers>
 </document>
